 - updated Java runtime to Java SE/FX 8u131, contains a bugfix for a memory
   leak in the WebView used by LeafletMap
 ExerciseViewer changes:
 - ported all exercise parsers and the unit tests written in Groovy to Kotlin
   - less dependencies, Groovy is not needed anymore (was big)
   - parser implementations are now faster and more stable (Kotlin is typesafe)
   - Kotlin can now be used in all modules together with Java
     (no more mixed compilation issues with Groovy code)
 - removed compiler warnings in LeafletMap component

v7.4.0:
 SportsTracker changes:
 - the bundled Java runtime has been updated to Java SE/FX 8u121
 ExerciseViewer changes:
 - Issue #153: added chart smoothing in diagram view for all axis types
   - makes charts with a lot of sample data better readable
   - most improvements for speed, cadence and heartrate charts
 - Preferences: added option for displaying smoothed charts, enabled by default
 - Preferences: renamed option for displaying a secondary chart
   (some users can loose their previous preferences, needs to be set again)
 - Garmin TCX parser: added support for run cadence sensors (issue #154)
   (no need to add to Garmin FIT parser, already supported there)
 - Track Panel: use of Leaflet map viewer instead of Swing-based JXMapViewer2
   - added JavaFX component leafletmap as a separate Maven module, it's a
     wrapper for simple usage of the Leafletmap JavaScript map viewer inside
     the embedded JavaFX web browser
   - new map viewer supports multiple map layers, changeable inside the viewer
     - OpenStreetMap (default)
     - OpenCycleMap
     - Hike & Bike Map
     - MTB Map
   - new map viewer displays a scale control
   - new map viewer display common markers in multiple colors for start, end
     and all the lap split positions
   - implementation details:
     - leafletmap was implemented in Kotlin for SportsTracker
     - leafletmap has no SportsTracker dependencies, can be used in other
       projects too